Fixed build page alignment

--- a/Client/src/css/buildpage.css
+++ b/Client/src/css/buildpage.css
@@ -78,7 +78,7 @@
   flex-wrap: wrap;
   gap: 0px 55px;
   margin: -10px 20px 20px 20px;
-  padding: 20px;
+  padding: 20px 20px 20px 50px;
   font-size: 10px;
 }
 
@@ -93,9 +93,9 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 0px 70px;
+  gap: 0px 65px;
   margin: -10px 20px 20px 20px;
-  padding: 20px;
+  padding: 20px 20px 20px 50px;
   font-size: 10px;
 }
 
@@ -118,9 +118,9 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 0px 80px;
+  gap: 0px 65px;
   margin: -10px 20px 20px 20px;
-  padding: 20px 20px 20px 40px;
+  padding: 20px 20px 20px 50px;
   font-size: 10px;
 }
 .artifact {
